--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,12 +3,20 @@
 
 <body>
 	<div class="nav-page-list" th:fragment="page_list">
+
+        <!-- <h1 th:inline="text">[[${#httpServletRequest.remoteUser}]]!</h1> -->
+
 		<ul class="nav justify-content-end">
 		  <li class="nav-item">
 		    <a class="nav-link active" aria-current="page" href="/accountBook">List</a>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link" href="/accountBook/form">登録Form</a>
+		  </li>
+		  <li class="nav-item">
+	        <form th:action="@{/logout}" method="post">
+              <input type="submit" value="Sign Out"/>
+	        </form>
 		  </li>
 		  <li class="nav-item">
 		    <a class="nav-link" href="#">予備リンク</a>
