--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,25 +10,18 @@
     <!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>ログイン画面</title>
+    <title>新規登録</title>
 </head>
 <body>
-<h1>Login</h1>
+<h1>SignUp</h1>
 
- <div th:if="${param.error}">
-     Invalid username and password.
- </div>
- <div th:if="${param.logout}">
-     You have been logged out.
- </div>
- <form th:action="@{/sign_in}" method="post">
-     <div><label> User Name : <input type="text" name="name"/> </label></div>
-     <div><label> Password: <input type="password" name="password"/> </label></div>
-     <div><label> Remember Me<input type="checkbox" name="remember-me" /> </label></div>
-     <div><input type="submit" value="Sign In"/></div>
- </form>
+<form th:action="@{/sign_up}" method="post">
+    <div><label> User Name : <input type="text" name="name"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Sign Up"/></div>
+</form>
 
-<a href="/signup">新規登録画面</a>
+<a href="/login">ログイン画面</a>
 </body>
 </html>
 
