--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,27 +2,68 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <body>
-	<div class="nav-page-list" th:fragment="page_list">
-	<div th:text="${#authentication.principal.username}"></div>
+<div class="nav-page-list" th:fragment="page_list">
 
-		<!-- <ul class="nav justify-content-end"> -->
-		<ul class="nav nav-pills nav-fill">
-		  <li class="nav-item">
-		    <a class="nav-link active" aria-current="page" href="/accountBook">List</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="/accountBook/form">登録Form</a>
-		  </li>
-		  <li class="nav-item">
-	        <form th:action="@{/logout}" method="post">
-              <input type="submit" value="Sign Out"/>
-	        </form>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">予備リンク</a>
-		  </li>
-		</ul>
-	</div>
+<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+	<div class="container-fluid">
+		<!-- .navbar-brand ブランド要素、ロゴなどを配置 -->
+    	<a class="navbar-brand" href="/accountBook">Money+</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarText">
+		<!-- .navbar-nav カテゴリーページなどのリンクを設置 / me-auto marginをendまで -->
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+					<div th:text="${#authentication.principal.username}"></div>
+				</li>
+
+				<!--   <li class="nav-item dropdown">
+				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				    Dropdown
+				  </a>
+				  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+				    <li><a class="dropdown-item" href="#">Action</a></li>
+				    <li><a class="dropdown-item" href="#">Another action</a></li>
+				    <li><hr class="dropdown-divider"></li>
+				    <li><a class="dropdown-item" href="#">Something else here</a></li>
+				  </ul>
+				</li> -->
+			</ul>
+
+			<form th:action="@{/logout}" method="post">
+				<input type="submit" value="Sign Out"/>
+			</form>
+
+			<!--  <form class="d-flex">
+				<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success" type="submit">Search</button>
+			</form> -->
+		</div><!-- class="collapse navbar-collapse" -->
+
+	</div><!-- class="container-fluid" -->
+</nav>
+
+<nav>
+	<ul class="nav nav-fill bg-light">
+		<li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/accountBook">家計簿</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="/accountBook/form">記録する</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">貯金目標</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">貯金する</a>
+		</li>
+	</ul>
+</nav>
+
+<div style="height:5vh;"></div>
+</div><!-- th:fragment="page_list" -->
 </body>
 
 </html>
