--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,15 +4,15 @@
 <body>
 <div class="nav-page-list" th:fragment="page_list">
 
-<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container-fluid">
 		<!-- .navbar-brand ブランド要素、ロゴなどを配置 -->
     	<a class="navbar-brand" href="/accountBook">Money+</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarText">
+		<div class="collapse navbar-collapse" id="navbarNav">
 		<!-- .navbar-nav カテゴリーページなどのリンクを設置 / me-auto marginをendまで -->
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
