--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,7 +14,7 @@
 <body>
 <h1>SignUp</h1>
 
-<form th:action="@{/sign_up}" method="post">
+<form method="post" th:action="@{/signup}" th:object="${siteUserForm}">
     <div><label> User Name : <input type="text" name="name"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign Up"/></div>
