--- a/src/main/resources/templates/accountBook/list.html
+++ b/src/main/resources/templates/accountBook/list.html
@@ -17,7 +17,7 @@
 <div th:insert="~{fragments/header :: page_list}"></div>
 
 <div class="container">
-	<!-- <h1 th:text="${test}">title</h1> -->
+	<h3 th:text="${loginUserCheck}">ログインユーザーチェック</h3>
 
 	<div class="row">
 		<h3>収入 : <span th:text="${totalIncome}">+</span> 円</h3>
