--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,8 @@
 <body>
 <div class="nav-page-list" th:fragment="page_list">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- navbar-expand-(画面サイズ) 折りたたむタイミングを指定 -->
+<nav class="navbar navbar-expand-md navbar-light bg-light">
 	<div class="container-fluid">
 		<!-- .navbar-brand ブランド要素、ロゴなどを配置 -->
     	<a class="navbar-brand" href="/accountBook">Money+</a>
@@ -14,10 +15,11 @@
 
 		<div class="collapse navbar-collapse" id="navbarNav">
 		<!-- .navbar-nav カテゴリーページなどのリンクを設置 / me-auto marginをendまで -->
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
-					<div th:text="${#authentication.principal.username}"></div>
+					<a href="#" th:text="${#authentication.principal.username}"></a>
 				</li>
+
 
 				<!--   <li class="nav-item dropdown">
 				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
