--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 <h1>SignUp</h1>
-<p th:text="${registerError}"></p>
+<div th:if="${param.error}">
+	<p>その名前は既に使用されています</p>
+</div>
 
 <form method="post" th:action="@{/signup}" th:object="${siteUserForm}">
     <div><label> User Name : <input type="text" name="name" th:value="*{name}"/> </label></div>
