欲しい物テーブルを実装 #6

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -47,8 +47,8 @@
 	</div><!-- class="container-fluid" -->
 </nav>
 
-<nav>
-	<ul class="nav nav-fill bg-light">
+<nav style="background-color: #FFC900">
+	<ul class="nav nav-fill">
 		<li class="nav-item">
 			<a class="nav-link active" aria-current="page" href="/accountBook">家計簿</a>
 		</li>
