欲しい物テーブルのテストデータを実装 #6

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -35,6 +35,8 @@
 			</ul>
 
 			<form th:action="@{/logout}" method="post">
+				<!-- <input type="submit" value="Sign Out"/> -->
+				<input type="hidden" value="Sign Out"/>
 				<input type="submit" value="Sign Out"/>
 			</form>
 
