--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,6 @@
 					<a class="nav-link" href="#" th:text="${#authentication.principal.username}"></a>
 				</li>
 
-
 				<!--   <li class="nav-item dropdown">
 				  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				    Dropdown
@@ -49,7 +48,7 @@
 
 <nav class="border-bottom">
 	<ul class="nav nav-fill">
-		<li class="nav-item">
+		<li class="nav-item border-right">
 			<a class="nav-link active" aria-current="page" href="/accountBook">家計簿</a>
 		</li>
 		<li class="nav-item">
