日付取得メソッド 現在日時を取得 #8

--- a/src/main/resources/templates/accountBookSearch/SearchTop.html
+++ b/src/main/resources/templates/accountBookSearch/SearchTop.html
@@ -18,9 +18,11 @@
 
 <div class="container">
 	<p>分析画面</p>
-	<div class="row">
 
+	<div class="row">
+		<h3 th:text="${nowTime}">現在の日時</h3>
 	</div>
 </div>
+
 </body>
 </html>
