--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -58,7 +58,7 @@
 			<a class="nav-link" href="/search">分析</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">貯金目標</a>
+			<a class="nav-link" href="/test">貯金目標</a>
 		</li>
 	</ul>
 </nav>
