--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -2,11 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta charset="UTF-8">
-<title>Test Page</title>
+	<meta charset="UTF-8">
+	<!-- Required meta tags -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+	<title>テスト画面</title>
 </head>
 
 <body>
-	<h1 th:text="${test}">sample</h1>
+
+
+<div class="container">
+	<p th:text="${test}">test</p>
+
+	<div class="row">
+		<h3 th:text="${nowTime}">現在の日時</h3>
+	</div>
+
+	<div class="row">
+		<a class="nav-link active" aria-current="page" href="/accountBook">TOP画面へ</a>
+	</div>
+</div>
+
 </body>
 </html>
